k3s/generated_manifests/intel-device-plugins-operator/Namespace-intel-device-plugins-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: intel-device-plugins-operator
