k3s/generated_manifests/intel-device-plugins-operator/Service-inteldeviceplugins-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: inteldeviceplugins-controller-manager-metrics-service
  namespace: intel-device-plugins-operator
spec:
  ports:
    - name: https
      port: 8443
      targetPort: https
  selector:
    control-plane: controller-manager
