k3s/generated_manifests/intel-device-plugins-operator/Service-inteldeviceplugins-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inteldeviceplugins-webhook-service
  namespace: intel-device-plugins-operator
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    control-plane: controller-manager
