k3s/generated_manifests/intel-device-plugins-operator/MutatingWebhookConfiguration-inteldeviceplugins-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: intel-device-plugins-operator/inteldeviceplugins-serving-cert
  name: inteldeviceplugins-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /mutate-deviceplugin-intel-com-v1-dlbdeviceplugin
    failurePolicy: Fail
    name: mdlbdeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - dlbdeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /mutate-deviceplugin-intel-com-v1-dsadeviceplugin
    failurePolicy: Fail
    name: mdsadeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - dsadeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /mutate-deviceplugin-intel-com-v1-fpgadeviceplugin
    failurePolicy: Fail
    name: mfpgadeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - fpgadeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /mutate-deviceplugin-intel-com-v1-gpudeviceplugin
    failurePolicy: Fail
    name: mgpudeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - gpudeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /mutate-deviceplugin-intel-com-v1-iaadeviceplugin
    failurePolicy: Fail
    name: miaadeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - iaadeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /mutate-deviceplugin-intel-com-v1-npudeviceplugin
    failurePolicy: Fail
    name: mnpudeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - npudeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /mutate-deviceplugin-intel-com-v1-qatdeviceplugin
    failurePolicy: Fail
    name: mqatdeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - qatdeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /mutate-deviceplugin-intel-com-v1-sgxdeviceplugin
    failurePolicy: Fail
    name: msgxdeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - sgxdeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /pods
    failurePolicy: Ignore
    name: fpga.mutator.webhooks.intel.com
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /mutate--v1-pod
    failurePolicy: Ignore
    name: sgx.mutator.webhooks.intel.com
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
