k3s/generated_manifests/intel-device-plugins-operator/ValidatingWebhookConfiguration-inteldeviceplugins-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: intel-device-plugins-operator/inteldeviceplugins-serving-cert
  name: inteldeviceplugins-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /validate-deviceplugin-intel-com-v1-dlbdeviceplugin
    failurePolicy: Fail
    name: vdlbdeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - dlbdeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /validate-deviceplugin-intel-com-v1-dsadeviceplugin
    failurePolicy: Fail
    name: vdsadeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - dsadeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /validate-deviceplugin-intel-com-v1-fpgadeviceplugin
    failurePolicy: Fail
    name: vfpgadeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - fpgadeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /validate-deviceplugin-intel-com-v1-gpudeviceplugin
    failurePolicy: Fail
    name: vgpudeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - gpudeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /validate-deviceplugin-intel-com-v1-iaadeviceplugin
    failurePolicy: Fail
    name: viaadeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - iaadeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /validate-deviceplugin-intel-com-v1-npudeviceplugin
    failurePolicy: Fail
    name: vnpudeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - npudeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /validate-deviceplugin-intel-com-v1-qatdeviceplugin
    failurePolicy: Fail
    name: vqatdeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - qatdeviceplugins
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: inteldeviceplugins-webhook-service
        namespace: intel-device-plugins-operator
        path: /validate-deviceplugin-intel-com-v1-sgxdeviceplugin
    failurePolicy: Fail
    name: vsgxdeviceplugin.kb.io
    rules:
      - apiGroups:
          - deviceplugin.intel.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - sgxdeviceplugins
    sideEffects: None
